syntax = "proto3";
package terrain;

import "common.proto";

message TerrainChunk {
    common.Chunk chunk = 1;
    int32 width = 2;
    int32 length = 3;
    int32 height = 4;
    bytes data = 5;
}

message TerrainMeshRequest {
    int32 resolution = 1;
    repeated float lods = 2;
}



service Terrain {
    rpc Get(stream common.Chunk) returns (stream TerrainChunk) {};
    rpc GetMesh(TerrainMeshRequest) returns (common.PMesh) {};
}